[package]
name = "atn2json"
version = "0.1.0"
authors = ["Maurits <maurits.rijk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
bytestream = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
utf16string = "0.2"
